// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`guide card snapshots should render use case card component for kubernetes 1`] = `
<UseCaseCard
  addBasePath={[MockFunction]}
  description="Monitor your Kubernetes infrastructure by consolidating your logs and metrics."
  footer={
    <GuideCardFooter
      activateGuide={[MockFunction]}
      guides={Array []}
      telemetryId="kubernetes"
      useCase="kubernetes"
    />
  }
  isDarkTheme={false}
  title="Observe my Kubernetes infrastructure"
  useCase="kubernetes"
/>
`;

exports[`guide card snapshots should render use case card component for search 1`] = `
<UseCaseCard
  addBasePath={[MockFunction]}
  description="Create a search experience for your websites, applications, workplace content, or anything in between."
  footer={
    <GuideCardFooter
      activateGuide={[MockFunction]}
      guides={Array []}
      telemetryId="search"
      useCase="search"
    />
  }
  isDarkTheme={false}
  title="Search my data"
  useCase="search"
/>
`;

exports[`guide card snapshots should render use case card component for siem 1`] = `
<UseCaseCard
  addBasePath={[MockFunction]}
  description="Investigate threats and get your SIEM up and running by installing the Elastic Defend integration."
  footer={
    <GuideCardFooter
      activateGuide={[MockFunction]}
      guides={Array []}
      telemetryId="siem"
      useCase="siem"
    />
  }
  isDarkTheme={false}
  title="Protect my environment"
  useCase="siem"
/>
`;
